# src/controllers/auth.controller.ts
@@ -41,10 +41,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response){
+    /**
+      #swagger.tags = ['Auth']
+   */
+
     const {fullname, username, email, password , confirmPassword} = 
     req.body as unknown as TRegister
 
- 
   try {
     await registerValidateSchema.validate({
       fullname,
@@ -59,7 +62,7 @@ export default {
       username,
       email,
       password,
-    })
+    });
 
     res.status(200).json({
       message: "success registration",
@@ -78,6 +81,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+      #swagger.tags = ['Auth']
       #swagger.requestBody = {
         required: true,
         schema: {
@@ -143,6 +147,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+      #swagger.tags = ['Auth']
       #swagger.security = [{
       "bearerAuth": []
       }]
